@@ -6,6 +6,9 @@
 - Fixed typo in nose.__all__. Thanks to John J Lee for the bug report.
 - Fixed handling of test descriptions that are multiline
   docstrings. Thanks to James Casbon for the patch (Issue #50).
+- Improved documentation of doctest plugin to make it clear that
+  entities may have doctests, or themselves be tests, but not
+  both. Thanks to John J Lee for the bug report and patch (Issue #84).
 
 0.10.0b1
 
